<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.smarttools.netguard.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/nav_profiles"
        android:name="com.smarttools.netguard.ui.profiles.ProfileListFragment"
        android:label="@string/nav_profiles">
        <action
            android:id="@+id/action_profiles_to_edit"
            app:destination="@id/nav_profile_edit" />
        <action
            android:id="@+id/action_profiles_to_my_servers"
            app:destination="@id/nav_my_servers" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_servers"
        android:name="com.smarttools.netguard.ui.managed.ManagedServerListFragment"
        android:label="@string/my_servers">
        <action
            android:id="@+id/action_my_servers_to_add_server"
            app:destination="@id/nav_add_server" />
        <action
            android:id="@+id/action_my_servers_to_detail"
            app:destination="@id/nav_managed_server_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_server"
        android:name="com.smarttools.netguard.ui.managed.AddServerFragment"
        android:label="@string/add_server" />

    <fragment
        android:id="@+id/nav_managed_server_detail"
        android:name="com.smarttools.netguard.ui.managed.ManagedServerDetailFragment"
        android:label="@string/my_servers" />

    <fragment
        android:id="@+id/nav_qr_scan"
        android:name="com.smarttools.netguard.ui.profiles.QrScanFragment"
        android:label="@string/scan_qr" />

    <fragment
        android:id="@+id/nav_profile_edit"
        android:name="com.smarttools.netguard.ui.profiles.ProfileEditFragment"
        android:label="@string/edit_profile">
        <argument
            android:name="profile_id"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

    <fragment
        android:id="@+id/nav_subscriptions"
        android:name="com.smarttools.netguard.ui.subscription.SubscriptionFragment"
        android:label="@string/nav_subscriptions">
        <action
            android:id="@+id/action_subscriptions_to_qr_scan"
            app:destination="@id/nav_qr_scan" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.smarttools.netguard.ui.settings.SettingsFragment"
        android:label="@string/nav_settings">
        <action
            android:id="@+id/action_settings_to_per_app"
            app:destination="@id/nav_per_app" />
        <action
            android:id="@+id/action_settings_to_trigger"
            app:destination="@id/nav_trigger" />
    </fragment>

    <fragment
        android:id="@+id/nav_per_app"
        android:name="com.smarttools.netguard.ui.settings.PerAppFragment"
        android:label="@string/per_app_vpn" />

    <fragment
        android:id="@+id/nav_trigger"
        android:name="com.smarttools.netguard.ui.settings.TriggerAppsFragment"
        android:label="@string/trigger_title" />

    <fragment
        android:id="@+id/nav_logs"
        android:name="com.smarttools.netguard.ui.logs.LogFragment"
        android:label="@string/nav_logs" />

</navigation>
