<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "My Servers" — VPS instances this device controls through
         netguard-agent. Lives in the Servers toolbar instead of a
         bottom-nav slot so we don't crowd the 5-icon nav. -->
    <item
        android:id="@+id/action_my_servers"
        android:title="@string/my_servers"
        android:icon="@drawable/ic_cloud"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_ping_all"
        android:title="@string/test_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_test_services"
        android:title="@string/test_services"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_ping"
        android:title="@string/sort_by_ping"
        app:showAsAction="never" />
</menu>
